What's New in Python 2.2.1 final?
Release date: XX-Apr-2002
=================================

Core

- Fixed super() to work correctly with class methods.  [SF bug #535444]

- Fixed two bugs reported as SF #535905: under certain conditions,
  deallocating a deeply nested structure could cause a segfault in the
  garbage collector, due to interaction with the "trashcan" code;
  access to the current frame during destruction of a local variable
  could access a pointer to freed memory.

Library

- The xml.sax.expatreader.ExpatParser class will no longer create
  circular references by using itself as the locator that gets passed
  to the content handler implementation.  [SF bug #535474]

C API

- A type can now inherit its metatype from its base type.  Previously,
  when PyType_Ready() was called, if ob_type was found to be NULL, it
  was always set to &PyType_Type; now it is set to base->ob_type,
  where base is tp_base, defaulting to &PyObject_Type.

- PyType_Ready() accidentally did not inherit tp_is_gc; now it does.

Windows

- Fixed a bug in urllib's proxy handling in Windows.  [SF bug #503031]

- The installer now installs Start menu shortcuts under (the local
  equivalent of) "All Users" when doing an Admin install.


What's New in Python 2.2.1c2?
Release date: 26-Mar-2002
=============================

There were a bunch of mostly minor fixes between 2.2.1c1 and 2.2.1c2,
including:

- I remembered to run autoconf before cutting the release tarball.

Core and builtins

- The floating point behavior fix-up continued into complex_pow.

Library

- The email package bug #531966 was fixed.  This caused exceptions to
  occur when flattening multipart/* messages with zero or one (scalar)
  attachment.

- Support for https: urls in httplib was broken (by the sendall patch
  mentioned below).

- Minor bugs in the calendar module were fixed.

- A few minor bugs in pydoc were fixed (better url recognition, proper
  quoting of some elements).
